fix header z-index

--- a/web/assets/dev/scss/bootstrap/_ui-header.scss
+++ b/web/assets/dev/scss/bootstrap/_ui-header.scss
@@ -9,6 +9,7 @@ header {
 	position: fixed;
 	top: 0;
 	left: 0;
+	z-index: 7;
 	width: 100%;
 	background: $white;
 }
